@@ -37,6 +37,10 @@ Next version (4.05.0):
 - GPR#891: Use -fno-builtin-memcmp when building runtime with gcc.
   (Leo White)
 
+- GPR#697: add hooks to monitor the activity of system threads, and
+  allow performance/memory profiling.
+  (Fabrice Le Fessant)
+
 ### Type system:
 
 - PR#6608, GPR#901: unify record types when overriding all fields
